# cc-grpc

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  buildinfo.go  push.sh  taint.sh
auth/: BUILD.bazel
cli/: BUILD.bazel  main.go
cli/cmd/: BUILD.bazel  report.go  root.go
cli/run_client/: BUILD.bazel  run_client.go
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  Client.js
frontend/src/proto/: api_pb.d.ts  api_pb.js  api_pb_service.d.ts  api_pb_service.js
lib/: BUILD.bazel  common.go
plaid/: BUILD.bazel  plaid.go
proto/api/: BUILD.bazel  api.proto
report/: BUILD.bazel  report.go
server/: BUILD.bazel  server.go
terraform/prod/: main.tf  provider.tf  variables.tf
