load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["common.go"],
    importpath = "github.com/pcarleton/cc-grpc/lib",
    visibility = ["//visibility:public"],
    deps = [
        "//plaid:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
