load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["report.go"],
    importpath = "github.com/pcarleton/cc-grpc/report",
    visibility = ["//visibility:public"],
    deps = [
        "//lib:go_default_library",
        "@com_github_pcarleton_sheets//:go_default_library",
        "@org_golang_google_api//sheets/v4:go_default_library",
    ],
)
