load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/pcarleton/cc-grpc/server",
    visibility = ["//visibility:public"],
    deps = [
        "//lib:go_default_library",
        "//proto/api:go_default_library",
        "@com_github_pcarleton_sheets//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
