load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "report.go",
        "root.go",
    ],
    importpath = "github.com/pcarleton/cc-grpc/cli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/api:go_default_library",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_nmrshll_oauth2_noserver//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
